<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CalibrationData" Id="{476de603-5286-4f25-ab54-510c3de969eb}">
    <Declaration><![CDATA[TYPE ST_CalibrationData :
STRUCT
	dateTime        	: STRING;
    pumpNumber      	: DINT;
    step            	: STRING;
    grossWt_g       	: REAL;
    tareWt_g        	: REAL;
    netWt_g         	: REAL;
    netVolume       	: REAL;
    targetVolume_ul 	: REAL;
    difference_ul   	: REAL;
    difference_percent 	: REAL;
    criteria        	: REAL;
    pumpRev         	: DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>